syntax = "proto3";
package tasks;

import "google/protobuf/wrappers.proto";

service Tasks {
  rpc List (ListRequest) returns (ListResponse);
  rpc Get (GetRequest) returns (Task);
  rpc Create (CreateRequest) returns (Task);
  rpc Update (UpdateRequest) returns (Task);
  rpc Patch (PatchRequest) returns (Task);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc BulkDelete (BulkDeleteRequest) returns (BulkDeleteResponse);
}

message Task {
  int32 id = 1;
  string title = 2;
  string details = 3;
  bool completed = 4;
  string completionReason = 5;
  string completionSignature = 6;
  string createdAt = 7;
  string updatedAt = 8;
  string completedAt = 9;
}

message ListRequest { string filter = 1; int32 page = 2; int32 pageSize = 3; }
message ListResponse { repeated Task items = 1; }

message GetRequest { int32 id = 1; }

message CreateRequest { string title = 1; string details = 2; }

message UpdateRequest {
  int32 id = 1;
  string title = 2;
  string details = 3;
  bool completed = 4;
}

// Optional fields use wrappers
message PatchRequest {
  int32 id = 1;
  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue details = 3;
  google.protobuf.BoolValue completed = 4;
  google.protobuf.StringValue completionReason = 5;
  google.protobuf.StringValue completionSignature = 6;
}

message DeleteRequest { int32 id = 1; }
message DeleteResponse { bool ok = 1; }

message BulkDeleteRequest { repeated int32 ids = 1; }
message BulkDeleteResponse { int32 deleted = 1; }